--- a/.github/workflows/tfmermaid.yml
+++ b/.github/workflows/tfmermaid.yml
@@ -34,5 +34,7 @@ jobs:
           then
             git config user.name "rafat-parveen"
             git commit -m "generated"
+            git show
+            git log
             git push -f
           fi
