--- a/.github/workflows/tfmermaid.yml
+++ b/.github/workflows/tfmermaid.yml
@@ -9,6 +9,21 @@ jobs:
       TF_PLUGIN_CACHE_DIR: ${{ github.workspace }}/.terraform.d/plugin-cache
     steps:
       - uses: actions/checkout@v3
+      - name: Setup SSH Keys and known_hosts
+        env:
+          PRIVATE_KEY: ${{ secrets.private_key }}
+        run: |
+          SSH_PATH="$HOME/.ssh"
+          mkdir -p "$SSH_PATH"
+          touch "$SSH_PATH/known_hosts"
+          echo "$PRIVATE_KEY" > "$SSH_PATH/id_rsa"
+          chmod 700 "$SSH_PATH"
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+          chmod 600 "$SSH_PATH/known_hosts"
+          chmod 600 "$SSH_PATH/id_rsa"
+          eval $(ssh-agent)
+          ssh-add "$SSH_PATH/id_rsa"
+          git clone git@github.com:test-org23456/renovate-test.git
       - uses: asannou/tfmermaid-action@master
         with:
           file: ${{ github.workspace }}/README.md
