--- a/.github/workflows/tfmermaid.yml
+++ b/.github/workflows/tfmermaid.yml
@@ -38,18 +38,18 @@ jobs:
           label: lambda
           include: provider
           working-directory: ./lambda
-      - uses: asannou/tfmermaid-action@master
-        with:
-          file: ${{ github.workspace }}/README.md
-          label: region
-          include: provider
-          working-directory: ./region
-      - uses: asannou/tfmermaid-action@master
-        with:
-          file: ${{ github.workspace }}/README.md
-          label: s3
-          include: provider
-          working-directory: ./s3
+#       - uses: asannou/tfmermaid-action@master
+#         with:
+#           file: ${{ github.workspace }}/README.md
+#           label: region
+#           include: provider
+#           working-directory: ./region
+#       - uses: asannou/tfmermaid-action@master
+#         with:
+#           file: ${{ github.workspace }}/README.md
+#           label: s3
+#           include: provider
+#           working-directory: ./s3
       - name: commit
         run: |
           git add README.md
@@ -57,5 +57,5 @@ jobs:
           then
             git config user.name "rafat-parveen"
             git commit -m "generated"
-            git push -f
+            git push -f origin main
           fi
