--- a/.github/workflows/tfmermaid.yml
+++ b/.github/workflows/tfmermaid.yml
@@ -57,5 +57,6 @@ jobs:
           then
             git config user.name "rafat-parveen"
             git commit -m "generated"
-            git push -f origin main
+            git show
+            git push -f origin master
           fi
