--- a/.github/workflows/tfmermaid.yml
+++ b/.github/workflows/tfmermaid.yml
@@ -55,7 +55,8 @@ jobs:
           git add README.md
           if ! git diff --cached --quiet --exit-code
           then
-            git config user.name "rafat-parveen"
+            git config user.name "github-actions[bot]"
+            git config user.email "github-actions[bot]@users.noreply.github.com"
             git commit -m "generated"
             git show
             git push -f origin master
